--- a/manifest.json
+++ b/manifest.json
@@ -5,5 +5,8 @@
     "action": {
         "default_popup": "index1.html",
         "default_icon": "logo.png"
-    }
+    },
+    "permissions": [
+        "tabs"
+    ]
 }
